--- a/src/sass/templates/header.scss
+++ b/src/sass/templates/header.scss
@@ -4,12 +4,16 @@
   background-position: center center;
   background-attachment: fixed;
   background-size: cover;
+  transform:translatez(0);
+  -webkit-transform:translatez(0);
+
 
   position: relative;
   height: 100vh;
 
   @media screen and (max-width: 606px) {
     height: 94vh;
+    background-image: url("../img/header__background--mobile.jpg");
   }
 
   &__topbar {
